docs/0.8/_sources/api/gammapy.spectrum.SpectrumFit.rst.txt
SpectrumFit
===========

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumFit
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumFit.bins_in_fit_range
      ~SpectrumFit.fit_range
      ~SpectrumFit.obs_list
      ~SpectrumFit.predicted_counts
      ~SpectrumFit.result
      ~SpectrumFit.statval
      ~SpectrumFit.true_fit_range

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumFit.calc_statval
      ~SpectrumFit.likelihood_profile
      ~SpectrumFit.likelihood_profiles
      ~SpectrumFit.optimize
      ~SpectrumFit.predict_counts
      ~SpectrumFit.run
      ~SpectrumFit.total_stat

   .. rubric:: Attributes Documentation

   .. autoattribute:: bins_in_fit_range
   .. autoattribute:: fit_range
   .. autoattribute:: obs_list
   .. autoattribute:: predicted_counts
   .. autoattribute:: result
   .. autoattribute:: statval
   .. autoattribute:: true_fit_range

   .. rubric:: Methods Documentation

   .. automethod:: calc_statval
   .. automethod:: likelihood_profile
   .. automethod:: likelihood_profiles
   .. automethod:: optimize
   .. automethod:: predict_counts
   .. automethod:: run
   .. automethod:: total_stat
